[package]
name = "tx-in-eth1-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = {workspace = true  }
alloy-primitives = {workspace = true  }
alloy-rlp = { workspace = true  }
alloy-trie = { workspace = true  }
alloy-network = {workspace = true  }
alloy-rpc-types = {workspace = true  }

anyhow = {workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }

[dev-dependencies]
tokio = { workspace = true }
alloy-provider = {workspace = true  }